# audiotorium

./: .asoundrc  Cargo.toml  Dockerfile  setup.yml  tile-tmux
api/: .env  .env-postgres-dev  .gitignore  Cargo.toml  build.rs  docker-compose-dev.yml  docker-compose.yml
api-cli/: Cargo.toml
api-cli/src/: main.rs
api/migrations/: 1_create-metadata-table.sql  2_create-playlist-tables.sql  3_add-ordering-to-playlist-items.sql  4_add-not-null-constraint-to-ordering.sql  5_rename-ordering-to-position.sql  6_autogenerate-position.sql  7_remove-position-sequence.sql  8_add_unique_constraint_for_playlist_item_positions.sql
api/src/: audio.rs  downloader.rs  error.rs  lib.rs  main.rs  opt_arc.rs  path.rs  server.rs  session.rs  utils.rs
api/src/audio/: audio_item.rs  audio_player.rs
api/src/audio_hosts/: youtube.rs
api/src/audio_hosts/youtube/: mod.rs  playlist.rs  video.rs
api/src/audio_playback/: audio_item.rs  audio_player.rs  mod.rs
api/src/brain/: brain_server.rs  brain_session.rs
api/src/commands/: node_commands.rs
api/src/database/: fetch_data.rs  mod.rs  store_data.rs
api/src/downloader/: actor.rs  download_identifier.rs  info.rs  mod.rs  youtube.rs
api/src/node/: health.rs  mod.rs  node_server.rs  node_session.rs  processor_communication.rs  recovery.rs
api/src/node/node_server/: async_actor.rs  connections.rs  download_notifications.rs  mod.rs  sync_actor.rs
api/src/rest_data_access/: mod.rs
api/src/state_storage/: mod.rs  restore_state_actor.rs
api/src/streams/: brain_streams.rs  mod.rs  node_streams.rs
app/: .env  .env.production  .gitignore  .prettierrc  global.d.ts  package.json  tsconfig.json
app/src/: app.html
app/src/api-types/: AddQueueItemParams.ts  AppErrorKind.ts  AudioIdentifier.ts  AudioMetaData.ts  AudioMetadata.ts  AudioNodeCommand.ts  AudioNodeHealth.ts  AudioNodeHealthMild.ts  AudioNodeHealthPoor.ts  AudioNodeInfo.ts  AudioNodeInfoStreamMessage.ts  AudioStateInfo.ts  BrainSessionWsResponse.ts  DownloadIdentifier.ts  DownloadInfo.ts  ErrorResponse.ts  LoopBounds.ts  LoopQueueParams.ts  MoveQueueItemParams.ts  NodeSessionWsResponse.ts  PlaySelectedParams.ts  PlaybackInfo.ts  PlaybackState.ts  PlaylistMetadata.ts  ProcessorInfo.ts  RemoveQueueItemParams.ts  RunningDownloadInfo.ts  SetAudioVolumeParams.ts  UserError.ts
app/src/lib/: SearchBar.svelte  badge.svelte  banner.svelte  utils.ts
app/src/lib/audio/: Queue.svelte  QueueItem.svelte  QueueItemPlaying.svelte  Sources.svelte
app/src/lib/queue/: ActiveAudio.svelte  AudioQueue.svelte
app/src/lib/search/: SearchBar.svelte  YouTubeSearch.svelte
app/src/routes/: +layout.svelte  +page.svelte
app/src/routes/audio/: +page.svelte
app/src/routes/queue/: +page.svelte
app/src/schema/: source.ts  video.ts
app/src/schema/messages/: message.ts  queueMessages.ts  queueResponses.ts  response.ts
app/tests/: test.ts
audio-manager/: stress-test  tile-tmux
audio-manager/api/: Cargo.toml  sources-dev.toml  sources-prod.toml
audio-manager/api-cli/: Cargo.toml  stress-test
audio-manager/api-cli/api-tests/: through-put-test
audio-manager/api-cli/src/: main.rs
audio-manager/api/src/: audio.rs  audio_player.rs  brain.rs  brain_session.rs  downloader.rs  lib.rs  main.rs  message_handler.rs  node.rs  node_session.rs  server.rs  session.rs  tests_utils.rs  utils.rs
audio-manager/api/src/audio/: audio_item.rs  audio_player.rs
audio-manager/api/src/brain/: brain_server.rs  brain_session.rs  mod.rs
audio-manager/api/src/commands/: node_commands.rs
audio-manager/api/src/node/: mod.rs  node_server.rs  node_session.rs
audio-manager/api/src/streams/: brain_streams.rs  mod.rs  node_streams.rs
audio-manager/apiv1/: Cargo.toml
audio-manager/app/: svelte.config.js
audio-manager/app/src/: app.html
audio-manager/app/src/api-types/: AudioMetaData.ts  AudioNodeInfo.ts  LoopBounds.ts  NodeSessionWsResponse.ts  ProcessorInfo.ts  (+1 more)
audio-manager/fake-alsa/: Cargo.toml
audio-manager/fake-alsa/src/: main.rs
docs/: architecture.excalidraw
fake-alsa/: .gitignore
fake-alsa/src/: main.rs
proto/: main.proto
src/: main.rs
(+16 files in other folders)
