[package]
name = "audio-manager-api-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.4", features = ["derive"] }
hex = "0.4.3"
itertools = "0.11.0"
reqwest = { version = "0.11.20", features = ["json"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
websocket = "0.27.0"

[dependencies.audio-manager-api]
path = "../api"
