[package]
name = "home-audio-manager-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
anyhow = "1.0.71"
cpal = "0.15.2"
env_logger = "0.10.0"
rodio = "0.17.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.9.2"
