[package]
name = "audio-manager-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-rt = "2.9.0"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
anyhow = "1.0.71"
clap = { version = "4.4.4", features = ["derive"] }
cpal = "0.15.2"
creek = { version = "1.0.0", features = ["decode-mp3"] }
dotenv = "0.15.0"
log = "0.4.19"
pretty_assertions = "1.4.0"
rtrb = "0.2.3"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
simple-logging = "2.0.2"
symphonia-core = "0.5.3"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
toml = "0.8.2"
ts-rs = "7.0.0"

[build-dependencies]
tonic-build = "0.9.2"
