[package]
name = "audio-manager-api-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
itertools = "0.11.0"
reqwest = "0.11.20"
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
websocket = "0.27.0"

[dependencies.audio-manager-api]
path = "../api"
